# pyOBDui

./: .gitignore  LICENSE  pyproject.toml  test.py
docs/: README.md
src/pyobdui/: __init__.py  constants.py  main.py
src/pyobdui/common/: __init__.py  logging.py
src/pyobdui/configs/: __init__.py  constants.py  models.py  service.py
src/pyobdui/db/: __init__.py  constants.py  repository.py
src/pyobdui/obd_connection/: __init__.py  client.py  constants.py
src/pyobdui/ui/: __init__.py  app.py  constants.py
