[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobdui"
version = "0.1.0"
description = "Vehicle monitoring UI backed by python-OBD and SQLite"
readme = "docs/README.md"
authors = [
  { name = "pyOBDui Maintainers" }
]
requires-python = ">=3.10"
dependencies = [
  "obd==0.7.3",
  "PyQt6>=6.7",
  "aiosqlite>=0.19",
  "pydantic>=2.6",
  "pandas>=2.2",
  "matplotlib>=3.9"
]

[project.optional-dependencies]
dev = [
  "black>=24.8",
  "ruff>=0.6",
  "mypy>=1.11"
]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict = true
mypy_path = ["src"]
